<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/_scrollview"
    tools:context=".gui.adm.ProfessorEditAdm">

    <LinearLayout
        style="@style/_linearLayout">

        <TextView
            style="@style/_registerTitle"
            android:text="@string/teacher" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpfLayoutEditProf"
            style="@style/_textInputLayoutOutlined">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/cpf"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomeLayoutEditProf"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/name"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enderecoLayoutEditProf"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/address"
                android:inputType="text|textMultiLine">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayoutEditProf"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/email"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/senhaLayoutEditProf"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/password"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cadastrarButtonEditProf"
            style="@style/_button"
            android:text="@string/save"
            android:onClick="salvar"/>

    </LinearLayout>

</ScrollView>