<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/_scrollview"
    tools:context=".gui.adm.CursoEditAdm">

    <LinearLayout
        style ="@style/_linearLayout">

        <TextView
            android:text="@string/course"
            style="@style/_registerTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomeLayoutEditCurso"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="150">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codigoLayoutEditCurso"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/course_code"
                android:inputType="number"
                android:maxLength="150">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/duracaoLayoutEditCurso"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/course_duration"
                android:inputType="number"
                android:maxLength="150">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ramalLayoutEditCurso"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/ramal"
                android:inputType="number"
                android:maxLength="150">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/siglaLayoutEditCurso"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/initials"
                android:inputType="text"
                android:maxLength="15">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cadastrarButtonEditAluno"
            style="@style/_button"
            android:text="@string/save"
            android:onClick="salvar"/>
    </LinearLayout>


</ScrollView>