<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/_scrollview"
    tools:context=".gui.adm.BlocoRegisterAdm">

    <LinearLayout
        style="@style/_linearLayout">

        <TextView
            android:text="@string/block"
            style="@style/_registerTitle" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codigoLayoutRegisterBloco"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/block_code"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/areaLayoutRegisterBloco"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/area"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipoLayoutRegisterBloco"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/type"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cadastrarButtonRegisterAluno"
            style="@style/_button"
            android:text="@string/save"
            android:onClick="salvar"/>


    </LinearLayout>

</ScrollView>