<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/_scrollview"
    tools:context=".gui.adm.BlocoEditAdm">

    <LinearLayout
        style="@style/_linearLayout">

        <TextView
            android:text="@string/block"
            style="@style/_registerTitle" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codigoLayoutEditBloco"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/block_code"
                android:inputType="number"
                android:maxLength="6">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/areaLayoutEditBloco"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/area"
                android:inputType="text"
                android:maxLength="150">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipoLayoutEditBloco"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/type"
                android:inputType="text"
                android:maxLength="150">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cadastrarButtonEditAluno"
            style="@style/_button"
            android:text="@string/save"
            android:onClick="salvar"/>


    </LinearLayout>

</ScrollView>