<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/_scrollview"
    tools:context=".gui.adm.SalaEditAdm">

    <LinearLayout
        style="@style/_linearLayout">

        <TextView
            style="@style/_registerTitle"
            android:text="@string/room" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numeroLayoutEditSala"
            style="@style/_textInputLayoutOutlined">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/room_number"
                android:inputType="number"
                android:maxLength="150">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/areaLayoutEditSala"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/area"
                android:inputType="text"
                android:maxLength="150">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipoLayoutEditSala"
            style="@style/_textInputLayoutOutlined">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/_textInputEdit"
                android:hint="@string/type"
                android:inputType="text"
                android:maxLength="150"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cadastrarButtonRegisterAluno"
            style="@style/_button"
            android:text="@string/save"
            android:onClick="salvar"/>


    </LinearLayout>

</ScrollView>